--- a/calculator/index.html
+++ b/calculator/index.html
@@ -96,10 +96,12 @@
     <button type="button" onclick="addToInput('/');">÷</button>
     <br>
     <button type="button" onclick="addToInput('e');">e</button>
-    <button type="button" onclick="addToInput('0');"></button>
+    <button type="button" onclick="addToInput('0');">0</button>
     <button type="button" onclick="addToInput('.');">.</button>
     <button type="submit">=</button>
     <br>
+    <button type="button" onclick="addToInput('(');">.</button>
+    <button type="button" onclick="addToInput(')');">.</button>
     <button type="button" onclick="addToInput('π');">π</button>
   </form>
 </div>
