--- a/calculator/index.html
+++ b/calculator/index.html
@@ -100,8 +100,8 @@
     <button type="button" onclick="addToInput('.');">.</button>
     <button type="submit">=</button>
     <br>
-    <button type="button" onclick="addToInput('(');">.</button>
-    <button type="button" onclick="addToInput(')');">.</button>
+    <button type="button" onclick="addToInput('(');">&#40;</button>
+    <button type="button" onclick="addToInput(')');">&#41;</button>
     <button type="button" onclick="addToInput('π');">π</button>
   </form>
 </div>
