--- a/calculator/index.html
+++ b/calculator/index.html
@@ -105,5 +105,5 @@
     <button type="button" onclick="addToInput('π');">π</button>
   </form>
 </div>
-
+<border><b>&copy; 2023 Y</b></border>
 </html>
