--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,7 +5,7 @@
 <head>
 </head>
 <h1>電卓</h1>
-<p>暇だったので作ってみました。</p>
+<p>最近少し退屈だったので作ってみました。<br>時間があれば何かしらの機能を追加する予定です</p>
 <br>
 <div id="gennumber">
   <meta charset="UTF-8">
