--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
   input {
-              width: 40%;
+              width: 50%;
               margin-bottom: 10px;
           }
           button {
@@ -35,7 +35,7 @@
     function clearInput() {
         var inputValue = document.getElementById("calculatorForm").value;
 
-        if (parseInt(inputValue) === 3243516) {
+        if (parseInt(inputValue) === 32442) {
             specialBackendAction();
         }
 
