--- a/calculator/index.html
+++ b/calculator/index.html
@@ -112,5 +112,5 @@ function calculateSquareRoot() {
     <button type="button" onclick="calculateSquareRoot();">√</button>
   </form>
 </div>
-<border><b>&copy; 2023 Y</b></border>
+<border><b>&copy; 2023 Ⓨ</b></border>
 </html>
